Fix profile image text on small screen

--- a/styles/profile.scss
+++ b/styles/profile.scss
@@ -71,6 +71,7 @@
                 height: 25%;
                 padding: 4px 25px;
                 color: white;
+                left: 0;
             }
         }
     }
